--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿anyio==3.5.0
+anyio==3.5.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.5.0
@@ -73,6 +73,7 @@ pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
+pywin32==303
 pywinpty==2.0.5
 pyzmq==22.3.0
 qtconsole==5.2.2
